[gd_scene load_steps=6 format=3 uid="uid://cenfxhlt2eegv"]

[ext_resource type="Script" path="res://Scripts/wasp.gd" id="1_kvwfk"]
[ext_resource type="Texture2D" uid="uid://cn5sroncsln18" path="res://Game_Sprites/Enemy/Wasp_256.png" id="2_iql44"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dvtqo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_iql44")
}],
"loop": false,
"name": &"attack",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_iql44")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rmdsx"]
radius = 13.0
height = 68.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cfr5h"]
radius = 15.0
height = 74.0

[node name="Wasp" type="CharacterBody2D"]
collision_mask = 5
script = ExtResource("1_kvwfk")

[node name="SpikeSpawner" type="Node2D" parent="."]
position = Vector2(0, 55.165)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.45, 0.45)
sprite_frames = SubResource("SpriteFrames_dvtqo")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 12)
shape = SubResource("CapsuleShape2D_rmdsx")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 52.76
debug_enabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="UpdateTarget" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-1, 12)
shape = SubResource("CapsuleShape2D_cfr5h")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="UpdateTarget" to="." method="_on_update_target_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
